<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24" />
    <item
        android:id="@+id/nav_game"
        android:icon="@drawable/ic_baseline_videogame_asset_24"
        android:title="@string/game" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />

    <item
        android:id="@+id/nav_friend"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/friend" />

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/chat" />
</menu>